fix/ change width to max-width for moblie to solve problem of overflow

--- a/src/components/Counter/Counter.module.css
+++ b/src/components/Counter/Counter.module.css
@@ -7,7 +7,7 @@
   color: var(--light-text-color);
   font-family: var(--placeholder-font);
   border-radius: 0px 43px;
-  width: 353px;
+  max-width: 353px;
   padding: 5px 68px 0 68px;
 }
 .TimeRemaining_InfoBox {
